updates to syn dep single cell figs

--- a/EEG/EEG_Data_Analysis_Tutorial.ipynb
+++ b/EEG/EEG_Data_Analysis_Tutorial.ipynb
@@ -340,7 +340,7 @@
     "# different parts of our EEG data:\n",
     "interact(update, w1 = widgets.IntSlider(value=1, min=0, max=len(eeg_data_1), step=1) , \n",
     "                 w2 = widgets.IntSlider(value=1, min=200, max=len(eeg_data_1), step=1) ,\n",
-    "                 h = widgets.IntSlider(value=1, min=1000, max=10000, step=1) );\n",
+    "                 h = widgets.IntSlider(value=1, min=1000, max=10000, step=1) )\n",
     "\n",
     "## INSTRUCTIONS FOR THE INTERACTIVE PLOT:\n",
     "## Move the 'w1' slider to adjust the starting x value limit for the plot\n",
@@ -596,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
